completed security backend side