@@ -1,8 +1,6 @@
 package io.github.abbassizied.sms.mappers;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 import org.mapstruct.Mapper;
 
 import io.github.abbassizied.sms.dtos.responses.ImageResponse;
@@ -10,12 +8,20 @@ import io.github.abbassizied.sms.entities.Image;
 
 @Mapper(componentModel = "spring")
 public interface ImageMapper {
+
 	ImageResponse toImageResponse(Image image);
 
-	default List<ImageResponse> ImageListToImageResponseList(List<Image> images) {
-		if (images == null) {
-			return List.of();
-		}
-		return images.stream().map(this::toImageResponse).collect(Collectors.toList());
-	}
+	// Let MapStruct handle the collection mapping automatically
+	List<ImageResponse> toImageResponseList(List<Image> images);
+
+	/*
+	 * default List<ImageResponse> imageListToImageResponseList(List<Image> images)
+	 * {
+	 * if (images == null) {
+	 * return List.of();
+	 * }
+	 * return images.stream().map(this::toImageResponse).toList();
+	 * }
+	 */
+
 }
